crates/reinhardt-pages/tests/ui/component/fail/loader_without_binding.rs
use reinhardt_pages::{Loader, Page, component, page};

#[component("/projects/", name = "project")]
fn project(Loader(data): Loader<String>) -> Page {
	page!(|data: String| {
		p { { data } }
	})(data)
}

fn main() {}
