crates/reinhardt-pages/tests/ui/component/fail/loader_without_binding.stderr
error: #[component] Loader<T> input requires a `loader = ...` route option
 --> tests/ui/component/fail/loader_without_binding.rs:4:19
  |
4 | fn project(Loader(data): Loader<String>) -> Page {
  |                   ^^^^

warning: unused imports: `Loader`, `Page`, and `page`
 --> tests/ui/component/fail/loader_without_binding.rs:1:23
  |
1 | use reinhardt_pages::{Loader, Page, component, page};
  |                       ^^^^^^  ^^^^             ^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
